<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.ringotangs</groupId>
    <artifactId>ringo-boot-parent</artifactId>
    <version>1.0.0</version>

    <packaging>pom</packaging>

    <name>Ringo Boot Parent</name>

    <modules>
        <module>ringo-boot-problem</module>
        <module>ringo-boot-verification</module>
        <module>ringo-boot-autoconfigure</module>
        <module>ringo-boot-sample</module>
    </modules>

    <description>Reusable components and examples for Spring Boot applications.</description>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <!-- deps version -->
        <spring.boot.version>3.5.16</spring.boot.version>
        <jspecify.version>1.0.0</jspecify.version>
        <lombok.version>1.18.46</lombok.version>
        <spotless-maven-plugin.version>3.9.0</spotless-maven-plugin.version>
        <palantir-java-format.version>2.92.0</palantir-java-format.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- spring boot -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring.boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- lombok -->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>

            <!-- null-safety annotations -->
            <dependency>
                <groupId>org.jspecify</groupId>
                <artifactId>jspecify</artifactId>
                <version>${jspecify.version}</version>
            </dependency>

            <!-- 项目模块 -->
            <!-- ringo-boot-problem -->
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>ringo-boot-problem</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- ringo-boot-verification -->
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>ringo-boot-verification</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- ringo-boot-autoconfigure -->
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>ringo-boot-autoconfigure</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>${spotless-maven-plugin.version}</version>
                <configuration>
                    <java>
                        <palantirJavaFormat>
                            <version>${palantir-java-format.version}</version>
                            <style>PALANTIR</style>
                            <formatJavadoc>false</formatJavadoc>
                        </palantirJavaFormat>
                        <trimTrailingWhitespace/>
                        <endWithNewline/>
                    </java>
                </configuration>
                <executions>
                    <execution>
                        <id>check-java-formatting</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring.boot.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>
